Fix : Removed footer overflow

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -26,7 +26,7 @@ body{
   right: 0;
   background: #111;
   height: 220px;
-  width: 100vw;
+  width: 100%;
   padding-top: 20px;
   color: #fff;
 }
@@ -87,7 +87,7 @@ body{
 
 .footer-bottom{
   background: #000;
-  width: 100vw;
+  width: 100%;
   padding: 20px;
 padding-bottom: 40px;
   text-align: center;
